# mtech

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.ipynb  pyproject.toml
streamlit_app/: app.py
