[tool.poetry]
name = "mtech"
version = "0.1.0"
description = "DS Trainee Test Task"
authors = ["Yaroslav Palamarchuk <palyaros02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
scipy = "^1.11.4"
numpy = "^1.26.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
streamlit = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
